# DTEAM-django-practical-test

./: .dockerignore  .env.docker  .gitignore  DEPLOYMENT.md  DOCKER.md  Dockerfile  Procfile  README.md  deploy.sh  django_debug.py  django_test.py  docker-compose.prod.yml  docker-compose.yml  h origin main  nginx.conf  pyproject.toml  railway.toml  railway_startup.py  requirements.txt  startup_check.py
CVProject/: celery.py  settings.py  settings_production.py  urls.py  wsgi.py
main/: admin.py  api_views.py  context_processors.py  middleware.py  models.py  serializers.py  tasks.py  tests.py  translation_service.py  urls.py  views.py
main/fixtures/: sample_cv.json
main/management/: __init__.py
main/management/commands/: setup_docker.py  setup_railway.py
main/migrations/: 0001_initial.py  0002_requestlog.py
main/templates/main/: base.html  celery_tasks.html  cv_detail.html  cv_list.html  cv_pdf.html  request_logs.html  settings.html
main/templatetags/: cv_extras.py
