[tool.poetry]
name = "dteam-django-practical-test"
description = "Django Developer Practical Test - CV Management System"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "CVProject"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
djangorestframework = "^3.14"
reportlab = "^4.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-django = "^4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "CVProject.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"] 